fix: overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -134,7 +134,7 @@ pre {
   white-space: pre;
 }
 
-pre :global(code) {
+pre > code {
   overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
